Epson Stylus C60               escp2-c60       EPSON Stylus C60
Epson Stylus C61               escp2-c61       EPSON Stylus C61
Epson Stylus C62               escp2-c62       EPSON Stylus C62
Epson Stylus C70               escp2-c70       EPSON Stylus C70
Epson Stylus C80               escp2-c80       EPSON Stylus C80
Epson Stylus C82               escp2-c82       EPSON Stylus C82
Epson Stylus Color             escp2           EPSON Stylus Color
Epson Stylus Color I           escp2           EPSON Stylus Color
Epson Stylus Color II          escp2           EPSON Stylus Color
Epson Stylus Color IIs         escp2           EPSON Stylus Color
Epson Stylus Color PRO         escp2-pro       EPSON Stylus Color Pro
Epson Stylus Color 400         escp2-400       EPSON Stylus Color 400
Epson Stylus Color 440         escp2-440       EPSON Stylus Color 440
Epson Stylus Color 460         escp2-460       EPSON Stylus Color 460
Epson Stylus Color 480         escp2-480       EPSON Stylus Color 480
Epson Stylus Color 500         escp2-500       EPSON Stylus Color 500
Epson Stylus Color 580         escp2-580       EPSON Stylus Color 580
Epson Stylus Color 600         escp2-600       EPSON Stylus Color 600
Epson Stylus Color 640         escp2-640       EPSON Stylus Color 640
Epson Stylus Color 660         escp2-660       EPSON Stylus Color 660
Epson Stylus Color 670         escp2-670       EPSON Stylus Color 670
Epson Stylus Color 680         escp2-680       EPSON Stylus Color 680
Epson Stylus Color 740         escp2-740       EPSON Stylus Color 740
Epson Stylus Color 760         escp2-760       EPSON Stylus Color 760
Epson Stylus Color 777         escp2-777       EPSON Stylus Color 777
Epson Stylus Color 8 3         escp2-83        EPSON Stylus Color 83
Epson Stylus Color 800         escp2-800       EPSON Stylus Color 800
Epson Stylus Color 850         escp2-850       EPSON Stylus Color 850
Epson Stylus Color 860         escp2-860       EPSON Stylus Color 860